Error: Not freed memory blocks #44127

Closed
opened 2015-03-25 06:02:05 +01:00 by perfection cat · 36 comments

System Information
Windows XP/SP3 32Bits

Blender Version
Broken: version 2.74 (sub 2), branch b'master', commit date b'2015-03-24' b'21:33', hash b'87cff57', b'Release'
Worked: unknown

Short description of error
Error: Not freed memory blocks: 4, total unfreed memory 0.002144 MB

Exact steps for others to reproduce the error
1.Run blender
2.Quit blender

An error was recorded when I output console log in a file.
Error: Not freed memory blocks: 4, total unfreed memory 0.002144 MB

**System Information** Windows XP/SP3 32Bits **Blender Version** Broken: version 2.74 (sub 2), branch b'master', commit date b'2015-03-24' b'21:33', hash b'87cff57', b'Release' Worked: unknown **Short description of error** Error: Not freed memory blocks: 4, total unfreed memory 0.002144 MB **Exact steps for others to reproduce the error** 1.Run blender 2.Quit blender An error was recorded when I output console log in a file. Error: Not freed memory blocks: 4, total unfreed memory 0.002144 MB
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @sindra1961

Added subscriber: @sindra1961
Author

I ran blender with a flag of debug-all, but the error is not recorded elsewhere.
result.txt

I ran blender with a flag of debug-all, but the error is not recorded elsewhere. [result.txt](https://archive.blender.org/developer/F154830/result.txt)
Author

This comment was removed by @sindra1961

*This comment was removed by @sindra1961*

Added subscriber: @Sergey

Added subscriber: @Sergey

Can not confirm the issue.

Does it happen when running blender with --factory-startup command line argument? What does blender --debug-memory output looks like?

Can not confirm the issue. Does it happen when running blender with `--factory-startup` command line argument? What does `blender --debug-memory` output looks like?
Author

Your indication is wrong.
Some processing is not carried out if I add factory-startup argument.
If there is a cause there, the phenomenon does not happen.
The error message is not surely output when I run blender with the argument which you ordered.
However, it reappears when I run blender after deleting startup.blend.
In addition, I run blender after deleting startup.blend and make startup.blend.
Then it reappears even if I run blender again.

Take back words.
The indication is not wrong and in this case is inappropriate.
However, it is a fact that the outbreak point of the cause was limited thanks to the instructions.

Your indication is wrong. Some processing is not carried out if I add factory-startup argument. If there is a cause there, the phenomenon does not happen. The error message is not surely output when I run blender with the argument which you ordered. However, it reappears when I run blender after deleting startup.blend. In addition, I run blender after deleting startup.blend and make startup.blend. Then it reappears even if I run blender again. Take back words. The indication is not wrong and in this case is inappropriate. However, it is a fact that the outbreak point of the cause was limited thanks to the instructions.
Author

I attach an error when I ran blender with debug-memory argument.

Switching to fully guarded memory allocator.
Read new prefs: C:\work\blender-2.74 Daily\2.74\config\userpref.blend
found bundled python: C:\work\blender-2.74 Daily\2.74\python
Error: Not freed memory blocks: 4, total unfreed memory 0.002144 MB

Blender quit

--------------------------------------------------------------------------------------------
The contents which were output by a Command Prompt window.

_build_translations_cache len: 44 0B2D31C0
ghash_buckets_resize len: 20 00332228
memory pool len: 36 0B2D3220
BLI_Mempool Chunk len: 1024 0B2D3278
--------------------------------------------------------------------------------------------
I attach an error when I ran blender with debug-memory argument. ``` Switching to fully guarded memory allocator. Read new prefs: C:\work\blender-2.74 Daily\2.74\config\userpref.blend found bundled python: C:\work\blender-2.74 Daily\2.74\python Error: Not freed memory blocks: 4, total unfreed memory 0.002144 MB Blender quit -------------------------------------------------------------------------------------------- The contents which were output by a Command Prompt window. _build_translations_cache len: 44 0B2D31C0 ghash_buckets_resize len: 20 00332228 memory pool len: 36 0B2D3220 BLI_Mempool Chunk len: 1024 0B2D3278 -------------------------------------------------------------------------------------------- ```
Author

It does not reappear when I run blender with factory-startup argument, but reproduces it when I run blender in the state that there is not startup.blend.

It does not reappear when I run blender with factory-startup argument, but reproduces it when I run blender in the state that there is not startup.blend.
Bastien Montagne self-assigned this 2015-03-26 08:29:01 +01:00

I cannot reproduce here either. Can you please attach here your userpref.blend file (should be next to startup.blend one).

I cannot reproduce here either. Can you please attach here your `userpref.blend` file (should be next to `startup.blend` one).
Author

This comment was removed by @sindra1961

*This comment was removed by @sindra1961*
Author

This comment was removed by @sindra1961

*This comment was removed by @sindra1961*
Author

This comment was removed by @sindra1961

*This comment was removed by @sindra1961*
Author

This comment was removed by @sindra1961

*This comment was removed by @sindra1961*
Author

This comment was removed by @sindra1961

*This comment was removed by @sindra1961*
Author

This comment was removed by @sindra1961

*This comment was removed by @sindra1961*
Author

I found a method to produce an error surely.

1.You delete startup.blend and userpref.blend and run blender.
2.You open the user prefs.
3.You turn on dynamic spacebar menu of addon.
4.You set international fonts in ON and choose one of translate.
5.You save user prefs.
6.You finish blender.

An error should be recorded in the log output.
result.txt

The log output when I set a series of setting after I started blender and carried out factory settings.
result.txt

I found a method to produce an error surely. 1.You delete startup.blend and userpref.blend and run blender. 2.You open the user prefs. 3.You turn on dynamic spacebar menu of addon. 4.You set international fonts in ON and choose one of translate. 5.You save user prefs. 6.You finish blender. An error should be recorded in the log output. [result.txt](https://archive.blender.org/developer/F155518/result.txt) The log output when I set a series of setting after I started blender and carried out factory settings. [result.txt](https://archive.blender.org/developer/F155519/result.txt)
Author

I confirmed that it reappeared in 2.74RC4.
I attach userpref.blend which I made by confirmation work.
userpref.blend
I attach the log file.
result.txt

blender-2.74-rc4-windows32.zip
version 2.74 (sub 0), branch b'master', commit date b'2015-03-26' b'16:12', hash b'3593082', b'Release'

I confirmed that it reappeared in 2.74RC4. I attach userpref.blend which I made by confirmation work. [userpref.blend](https://archive.blender.org/developer/F155659/userpref.blend) I attach the log file. [result.txt](https://archive.blender.org/developer/F155660/result.txt) blender-2.74-rc4-windows32.zip version 2.74 (sub 0), branch b'master', commit date b'2015-03-26' b'16:12', hash b'3593082', b'Release'
Author

There was a report like this before.
#30271
However, it was closed for the reason of not being able to reappear.

I do not know whether the cause of that report is the same as this.

There was a report like this before. [#30271](https://developer.blender.org/T30271) However, it was closed for the reason of not being able to reappear. I do not know whether the cause of that report is the same as this.

Added subscriber: @SatoshiYamasaki

Added subscriber: @SatoshiYamasaki

Confirmed with blender 2.74RC4 in Windows8.1Pro x64.
Is this a problem related Japanese (or Asian multibyte) Windows? hmm...

Confirmed with blender 2.74RC4 in Windows8.1Pro x64. Is this a problem related Japanese (or Asian multibyte) Windows? hmm...

Added subscriber: @ideasman42

Added subscriber: @ideasman42

Issue is “simply” that app_translations_free() is not called when leaving Blender, once you enable that 'space_bar' addon…

Why this happens is pitch black mystery to me, currently… Campbell, you may have an idea?

Issue is “simply” that `app_translations_free()` is not called when leaving Blender, once you enable that 'space_bar' addon… Why this happens is pitch black mystery to me, currently… Campbell, you may have an idea?

This issue was referenced by blender/blender-addons@5d4cd5ae50

This issue was referenced by blender/blender-addons@5d4cd5ae50cde918acd117998277b7ed46dd3b09

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Closed by commit blender/blender-addons@5d4cd5ae50.

Changed status from 'Resolved' to: 'Open'

Changed status from 'Resolved' to: 'Open'

Added subscriber: @mont29

Added subscriber: @mont29

@mont29, Python isn't totally reliable here, Python isn't 100% sure to free all PyObject's on exit.

Would be better to call from BPY_python_end, similar to bpy_intern_string_exit and others, See P216

Re-opening.

@mont29, Python isn't totally reliable here, Python isn't 100% sure to free all PyObject's on exit. Would be better to call from `BPY_python_end`, similar to `bpy_intern_string_exit` and others, See [P216](https://archive.blender.org/developer/P216.txt) Re-opening.
Author

I think that it was good that a cause becomes clear.
I hope that it is revised so that influence is not given elsewhere.
I intend to give the words of thanks if I confirm that a problem was improved.

I think that it was good that a cause becomes clear. I hope that it is revised so that influence is not given elsewhere. I intend to give the words of thanks if I confirm that a problem was improved.
Author

@mont29
What you revised only deleted the nonsense line from py file.
The phenomenon does not reappear in it, but it is surely only symptomatic therapy.
Why do you not improve it to identify a cause?
I think that this cause only occurs because settlement is incomplete.
I think that it is natural for a problem not to occur even if you do not delete the line.

@mont29 What you revised only deleted the nonsense line from py file. The phenomenon does not reappear in it, but it is surely only symptomatic therapy. Why do you not improve it to identify a cause? I think that this cause only occurs because settlement is incomplete. I think that it is natural for a problem not to occur even if you do not delete the line.

@sindra1961, the cause is known, P216 should fix it.

@sindra1961, the cause is known, [P216](https://archive.blender.org/developer/P216.txt) should fix it.
Author

@ideasman42 , thanks. I agree with you.

@ideasman42 , thanks. I agree with you.

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Fixed as f7dbce9914.

Fixed as f7dbce9914.
Author

@mont29, @ideasman42:
I confirmed that a problem did not recur even if I added "from bpy import *" to space_view3d_spacebar_menu.py in the latest edition.

Thank you.

@mont29, @ideasman42: I confirmed that a problem did not recur even if I added "from bpy import *" to space_view3d_spacebar_menu.py in the latest edition. Thank you.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
6 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#44127
No description provided.