Real fix for T44127: Python does not guarantee to free all objects on exit...

All kudos to Campbell for the head-up and patch!