source/blender/python/intern/bpy_app_translations.h
@@ -28,5 +28,6 @@
 #define __BPY_APP_TRANSLATIONS_H__
 
 PyObject *BPY_app_translations_struct(void);
+void      BPY_app_translations_end(void);
 
 #endif /* __BPY_APP_TRANSLATIONS_H__ */
